[project]
name = "ltx-video-inpaint"
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "torch>=2.1.0",
    "diffusers>=0.28.2",
    "transformers>=4.47.2",
    "sentencepiece>=0.1.96",
    "huggingface-hub~=0.30",
    "einops",
    "timm",
    "accelerate",
    "matplotlib",
    "imageio[ffmpeg]",
    "fastapi[standard]>=0.115.11",
    "msgpack>=1.1.0",
    "av>=14.2.0",
]
