[project]
name = "ltx-video-inpaint"
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "accelerate>=1.6.0",
    "av>=14.3.0",
    "diffusers>=0.33.1",
    "einops>=0.8.1",
    "huggingface-hub>=0.30.2",
    "imageio[ffmpeg]>=2.37.0",
    "matplotlib>=3.10.1",
    "sentencepiece>=0.2.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
